not collapsing on iphone. potential fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,12 @@ body {
   padding-right: 15px;
 }*/
 
+@media (min-width: 992px) {
+  .container {
+    width: 750px;
+  }
+}
+
 @media (min-width: 1200px) {
   .container {
     width: 750px;
